--- a/website/facs_website_front/public/index.html
+++ b/website/facs_website_front/public/index.html
@@ -8,9 +8,9 @@
     <title>facs_website_front02</title>
   </head>
   <body>
-<!--    <noscript>-->
-<!--      <strong>We're sorry but facs_website_front02 doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>-->
-<!--    </noscript>-->
+   <noscript>
+     <strong>We're sorry but facs_website_front02 doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+   </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
